microservices/payroll/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payroll-deployment
  labels:
    app: payroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payroll
  template:
    metadata:
      labels:
        app: payroll
    spec:
      containers:
      - name: payroll
        image: nourgharby/teamflow-payroll:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5003
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: payroll-service
spec:
  selector:
    app: payroll
  ports:
  - port: 80
    targetPort: 5003
