microservices/payroll/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payroll-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: payroll.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payroll-service
            port:
              number: 80
